# my-dataclass-is-a-dict

./: .flake8  .gitignore  README.md  build  build-wheel  pylint  pyproject.toml  requirements.dev.txt
tests/: .pylintrc  conftest.py  test_mixin.py  test_mixin_repr.py
