[project]
name = "my-dataclass-is-a-dict"
version = "0.2"
description = "Give a dictionary interface to a dataclass"
license = {"file" = "LICENSE"}
readme = "README.md"

[project.urls]
homepage = "https://github.com/dypabo/my-dataclass-is-a-dict"
documentation = "https://github.com/dypabo/my-dataclass-is-a-dict"
repository = "https://github.com/dypabo/my-dataclass-is-a-dict"


[project.optional-dependencies]
dev = [
  "black>=22.10.0",
  "flake8>=6.0.0",
  "mypy>=0.991",
  "pylint>=2.15.7",
  "pytest>=7.2.0",
  "twine>=4.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.distutils.bdist_wheel]
universal = true


[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']


